2016-01-03 0.6.1 alpha
Initial works on documentation.
Minor bug fixes.

2016-01-03 0.6.0 alpha
Implemented most of the options.
"Render to Wave" is now implemented.
Finished saving & loading playlists.
Fixed several leakage and bugs.

2016-01-02 0.5.1
Now sends SysEx(optional).
Primitive settings implementation(some of the audio tab and the
soundfont tab).

2016-01-01 0.5.0
Bug fixes. Minor code refactoring.
Initial stubs for the settings window.

2015-12-31 0.5.0
Implemented effect parameter editor and file information window.
Bump version.

2015-12-30 primitive version
Implemented the channel parameter editor.

2015-12-29 primitive version
Implemented the channel preset chooser.

2015-12-28 primitive version
Partially implemented the channel window.
Fixed a seeking bug.
Minor cleanups.

2015-12-27 primitive version
Implemented the play list.

2015-12-26 primitive version
Implemented the stop button, fixed several bugs.

2015-12-25 primitive version
Implemented the GUI based on the previous CLI version.