@@ -1,7 +1,7 @@
 # QMidiPlayer
 A cross-platform midi file player based on libfluidsynth and Qt.
 
-Now it's in alpha stage. There are still a whole bunch of bugs, be careful...
+Now it's in beta stage. Crashes may still occur, ~run with gdb attatched if you could~.
 
 Features:
 * Channel mute/solo
