@@ -17,7 +17,7 @@
 	</ul>
 	<h1>Using QMidiPlayer</h1>
 	<ul>
-		<li>The main window</li>
+		<li><a href="mainwindow.html">The main window</a></li>
 		<li>The channels dialog</li>
 		<li>The channels parameters editor</li>
 		<li>The playlist dialog</li>
