@@ -1,0 +1,26 @@
+<!DOCTYPE html>
+<html>
+<head>
+<title>QMidiPlayer Help</title>
+</head>
+<body>
+	<h1>Main Window</h1>
+	<img src="../img/mainw.png"><br>
+	<ul>
+		<li>1. Now playing. Right clicking here will bring up the <a href="#fileop"> file operation menu</a>.</li>
+		<li>2. Playing control slider. The total playing time is estimated and isn't 100% accurate.</li>
+		<li>3. Playing control buttons.</li>
+		<li>4. Settings button.</li>
+		<li>5. Dialog toggle buttons.</li>
+		<li>6. Master gain slier.</li>
+		<li>7. Polyphone indicator.</li>
+		<li>8. <s>It's me!</s></li>
+	</ul>
+	<h3><a name="fileop">File operation menu</a></h3>
+	<ul>
+		<li>File Information.</li>
+		<li>Render to Wave.</li>
+	</ul>
+	<br><a href="index.html">Return</a>
+</body>
+</html> 
