@@ -19,11 +19,11 @@
 #include <QApplication>
 #include <QStyle>
 
-int main(int argc, char *argv[])
+int main(int argc,char **argv)
 {
 	QApplication a(argc,argv);
 	qmpMainWindow w;
-	w.show();
+	if(w.pharseArgs(argc,argv)==1)return 0;
 
 	return a.exec();
 }
