@@ -1,3 +1,11 @@
+2016-01-06 0.6.2 beta
+Initial command line parameters handling.
+Minor bug fixes.
+
+2016-01-04 0.6.1 alpha
+Avoid strange results in channel view.
+Fixed several crashes.
+
 2016-01-03 0.6.1 alpha
 Initial works on documentation.
 Minor bug fixes.
